[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "code4"
version = "1.0.0"
description = "code4"
readme = "README.md"
authors = [
    {name = "Daniel Costa",email = "danieldcsta@gmail.com"}
]


[tool.poetry.dependencies]
python = "^3.12"
poetry-core = ">=2.0.0,<3.0.0"
pythonlogs = "^3.0.13"
